Quick fix for broken cards on ie

--- a/tps-forvalteren-provider/tps-forvalteren-provider-web/src/main/web-src/src/styles/testdata.less
+++ b/tps-forvalteren-provider/tps-forvalteren-provider-web/src/main/web-src/src/styles/testdata.less
@@ -2,6 +2,10 @@
 
   display: flex;
 
+  md-card-content {
+    flex-basis: auto;
+  }
+
   .tps-no-scroll-view {
     height: 88%;
   }
